[package]
name = "capa"
version = "0.3.14"
description = "File capability extractor."
authors = ["Marirs <marirs@gmail.com>", "Andrey Mnatsakanov <andrey@3ig.kiev.ua>", "Jorge Alejandro Durán Royo<jorge.duran.royo@gmail.com>"]
keywords = ["capa", "fce", "capability", "file"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/marirs/capa-rs"
homepage = "https://github.com/marirs/capa-rs"
exclude = ["examples", "data"]
edition = "2021"

[dependencies]
hex = "0.4.3"
itertools = "0.12.1"
pdb = "0.8.0"
petgraph = "0.6.2"
regex = "1.5"
fancy-regex = { git = "https://github.com/mnaza/fancy-regex.git" }
serde = { version = "1", features = ["derive"] }
smda = "0.2.7"
thiserror = "1"
walkdir = "2.3.2"
yaml-rust = "0.4.5"
goblin = { version = "0.8.0", features = ["alloc"] }
maplit = "1"
dnfile = { git = "https://github.com/marirs/dnfile-rs.git", branch = "master" }
lazy_static = "1.4.0"
parking_lot = "0.12.1"
serde_json = "1.0.113"
log = "0.4.21"
memoffset = "0.9.0"
memmap2 = "0.9.4"
termcolor = "1.4.1"
scroll = "0.12.0"
once_cell = "1.19.0"
dynamic-loader-cache = "0.1"
rayon = "1.10.0"

[dev-dependencies]
clap = { version = "4.0.27", features = ["cargo", "derive"] }

prettytable-rs = "0.10.0"

[lib]
name = "capa"
path = "src/lib.rs"

[features]
default = ["properties"]
verbose = []
properties = []

[[example]]
name = "capa_cli"
path = "examples/capa_cli.rs"
required-features = ["properties"]

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
