[package]
name = "capa"
version = "0.3.20"
description = "File capability extractor."
authors = ["Marirs <marirs@gmail.com>", "Andrey Mnatsakanov <andrey@3ig.kiev.ua>", "Jorge Alejandro Durán Royo<jorge.duran.royo@gmail.com>"]
keywords = ["capa", "fce", "capability", "aslr", "reverse"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/marirs/capa-rs"
homepage = "https://github.com/marirs/capa-rs"
exclude = ["examples", "data"]
edition = "2021"

[dependencies]
hex = "0.4.3"
itertools = "0.13.0"
pdb = "0.8.0"
petgraph = "0.6.2"
regex = "1.5"
fancy-regex = { git = "https://github.com/mnaza/fancy-regex.git" }
serde = { version = "1", features = ["derive"] }
smda = { git = "https://github.com/marirs/smda-rs.git" }
thiserror = "1"
walkdir = "2.3.2"
yaml-rust = "0.4.5"
goblin = { version = "0.9.1", features = ["alloc"] }
maplit = "1"
dnfile = { git = "https://github.com/marirs/dnfile-rs.git", branch = "master" }
lazy_static = "1"
parking_lot = "0.12.3"
serde_json = "1"
memoffset = "0.9.1"
memmap2 = "0.9.5"
scroll = "0.12.0"
once_cell = "1.20"
dynamic-loader-cache = "0.2"

[dev-dependencies]
clap = { version = "4.5", features = ["cargo", "derive"] }

prettytable-rs = "0.10.0"

[lib]
name = "capa"
path = "src/lib.rs"

[features]
default = ["properties"]
verbose = []
properties = []

[[example]]
name = "capa_cli"
path = "examples/capa_cli.rs"
required-features = ["properties"]

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
